--- a/start/session.yml
+++ b/start/session.yml
@@ -20,8 +20,8 @@ windows:
       panes:
         - waitForSimulation; rosservice call /mrs_drone_spawner/spawn "1 --enable-rangefinder --enable_bluefox_camera --pos_file `pwd`/pos/pos1.yaml";
           export UAV_NAME=uav1; waitForOdometry; roslaunch mrs_uav_general core.launch
-        # - waitForSimulation; rosservice call /mrs_drone_spawner/spawn "2 --enable-rangefinder --enable_bluefox_camera --pos_file `pwd`/pos/pos2.yaml";
-        #   export UAV_NAME=uav2; waitForOdometry; roslaunch mrs_uav_general core.launch
+        - waitForSimulation; rosservice call /mrs_drone_spawner/spawn "2 --enable-rangefinder --enable_bluefox_camera --pos_file `pwd`/pos/pos2.yaml";
+          export UAV_NAME=uav2; waitForOdometry; roslaunch mrs_uav_general core.launch
         # - waitForSimulation; rosservice call /mrs_drone_spawner/spawn "3 --enable-rangefinder --enable_bluefox_camera --pos_file `pwd`/pos/pos3.yaml";
         #   export UAV_NAME=uav3; waitForOdometry; roslaunch mrs_uav_general core.launch
         # - waitForSimulation; rosservice call /mrs_drone_spawner/spawn "4 --enable-rangefinder --enable_bluefox_camera --pos_file `pwd`/pos/pos4.yaml";
@@ -30,46 +30,48 @@ windows:
         #   export UAV_NAME=uav5; waitForOdometry; roslaunch mrs_uav_general core.launch
         # - waitForSimulation; rosservice call /mrs_drone_spawner/spawn "6 --enable-rangefinder --enable_bluefox_camera --pos_file `pwd`/pos/pos6.yaml";
         #   export UAV_NAME=uav6; waitForOdometry; roslaunch mrs_uav_general core.launch
+  - control:
+    layout: tiled
+    panes:
+      - export UAV_NAME=uav1; waitForOdometry; roslaunch mrs_uav_general core.launch
+      # - export UAV_NAME=uav2; waitForOdometry; roslaunch mrs_uav_general core.launch
+      # - export UAV_NAME=uav3; waitForOdometry; roslaunch mrs_uav_general core.launch
+      # - export UAV_NAME=uav4; waitForOdometry; roslaunch mrs_uav_general core.launch
+      # - export UAV_NAME=uav5; waitForOdometry; roslaunch mrs_uav_general core.launch
   - takeoff:
       layout: tiled
       panes:
-        - waitForOdometry;export UAV_NAME=uav1;
-          sleep 15;
-          rosservice call /$UAV_NAME/control_manager/motors 1;
+        # uav 1
+        - export UAV_NAME=uav1; waitForSimulation; roslaunch mrs_uav_general automatic_start.launch
+        - "export UAV_NAME=uav1; waitForControl;
           rosservice call /$UAV_NAME/mavros/cmd/arming 1;
-          rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
-          rosservice call /$UAV_NAME/uav_manager/takeoff
-        # - waitForOdometry;export UAV_NAME=uav2;
-        #   sleep 15;
-        #   rosservice call /$UAV_NAME/control_manager/motors 1;
-        #   rosservice call /$UAV_NAME/mavros/cmd/arming 1;
-        #   rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
-        #   rosservice call /$UAV_NAME/uav_manager/takeoff
-        # - waitForOdometry;export UAV_NAME=uav3;
-        #   sleep 15;
-        #   rosservice call /$UAV_NAME/control_manager/motors 1;
-        #   rosservice call /$UAV_NAME/mavros/cmd/arming 1;
-        #   rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
-        #   rosservice call /$UAV_NAME/uav_manager/takeoff
-        # - waitForOdometry;export UAV_NAME=uav4;
-        #   sleep 15;
-        #   rosservice call /$UAV_NAME/control_manager/motors 1;
-        #   rosservice call /$UAV_NAME/mavros/cmd/arming 1;
-        #   rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
-        #   rosservice call /$UAV_NAME/uav_manager/takeoff
-        # - waitForOdometry;export UAV_NAME=uav5;
-        #   sleep 15;
-        #   rosservice call /$UAV_NAME/control_manager/motors 1;
-        #   rosservice call /$UAV_NAME/mavros/cmd/arming 1;
-        #   rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
-        #   rosservice call /$UAV_NAME/uav_manager/takeoff
-        # - waitForOdometry;export UAV_NAME=uav6;
-        #   sleep 15;
-        #   rosservice call /$UAV_NAME/control_manager/motors 1;
-        #   rosservice call /$UAV_NAME/mavros/cmd/arming 1;
-        #   rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
-        #   rosservice call /$UAV_NAME/uav_manager/takeoff
+          sleep 2;
+          rosservice call /$UAV_NAME/mavros/set_mode 0 offboard"
+        # # uav 2
+      #   - export UAV_NAME=uav2; waitForSimulation; roslaunch mrs_uav_general automatic_start.launch
+      #   - 'export UAV_NAME=uav2; waitForControl;
+      #     rosservice call /$UAV_NAME/mavros/cmd/arming 1;
+      #     sleep 2;
+      #     rosservice call /$UAV_NAME/mavros/set_mode 0 offboard'
+      # # uav 3
+      #   - export UAV_NAME=uav3; waitForSimulation; roslaunch mrs_uav_general automatic_start.launch
+      #   - 'export UAV_NAME=uav3; waitForControl;
+      #     rosservice call /$UAV_NAME/mavros/cmd/arming 1;
+      #     sleep 2;
+      #     rosservice call /$UAV_NAME/mavros/set_mode 0 offboard'
+      # # uav 4
+      #   - export UAV_NAME=uav4; waitForSimulation; roslaunch mrs_uav_general automatic_start.launch
+      #   - 'export UAV_NAME=uav4; waitForControl;
+      #     rosservice call /$UAV_NAME/mavros/cmd/arming 1;
+      #     sleep 2;
+      #     rosservice call /$UAV_NAME/mavros/set_mode 0 offboard'
+      # # uav 5
+      #   - export UAV_NAME=uav5; waitForSimulation; roslaunch mrs_uav_general automatic_start.launch
+      #   - 'export UAV_NAME=uav5; waitForControl;
+      #     rosservice call /$UAV_NAME/mavros/cmd/arming 1;
+      #     sleep 2;
+      #     rosservice call /$UAV_NAME/mavros/set_mode 0 offboard'
   - solution:
     layout: tiled
     panes:
-      - waitForOdometry; roslaunch carcara vision.launch
+      - waitForOdometry; python ../carcara/scripts/fire_detector_node.py
